# matrix_terminator

./: .cproject  .hgignore  .project  CMakeLists.txt  COPYING  README  build.sh  build_debug.sh  build_release.sh
CMake/cuda/FindCUDA/: run_nvcc.cmake
src/: CMakeLists.txt  ccpso2_matrix_generator.cu  config.h  custom_matrix_generator.cu  ensure.cu  evo.cu  evo.h  evo_adaptive_gauss_mutation.cu  evo_lib_test.c  evo_matrix_generator.cu  evo_memory.cu  evo_rating.cu  evo_rating.h  evo_rating2.cu  evo_recombination.cu  evo_selection.cu  evo_setup.cu  evo_setup.h  evo_setup.tmp  instance.cu  instance.h  main.cu  matrix.c  matrix_copy.cu  matrix_copy.h  matrix_cuda.cu  matrix_float.cpp  matrix_generator.cu  matrix_generator.h  matrix_print.cu  matrix_print.h  plot_log.cu  plot_log.h  pso_matrix_generator.cu  tags  ya_malloc.h
src/ccpso2/: pso.cu  pso.h  pso_config.h  pso_copy.cu  pso_instance.cu  pso_instance.h  pso_memory.h  pso_param_s.cu  pso_param_s.h  pso_print.cu  pso_print.h  pso_rating.cu  pso_rating.h  pso_setup.cu  pso_setup.h
src/custom/: c_calc_function.cu  c_config.h  c_instance.cu  c_instance.h  c_print.cu  c_print.h  c_rating.cu  c_rating.h  c_rating2.cu  c_rating2.h  c_setup.cu  c_setup.h
src/evo/: config.h  evo.cu  evo.h  evo_adaptive_gauss_mutation.cu  evo_memory.cu  evo_rating.cu  evo_rating.h  evo_recombination.cu  evo_selection.cu  evo_setup.cu  evo_setup.h  instance.cu  instance.h  matrix_copy.cu  matrix_copy.h  matrix_print.cu  matrix_print.h  plot_log.cu  plot_log.h
src/lib/: CMakeLists.txt  ccpso2_lib_instance.cu  ccpso2_matrix_generator.cu  custom_lib_instance.cu  custom_matrix_generator.cu  evo_error.h  evo_info.cu  evo_info.h  evo_instance.cu  evo_lib_instance.cu  evo_lib_test.c  evo_matrix_generator.cu  lib_test.c  mat_lib_info.cu  mat_lib_info.h  matrix_generator.cu  matrix_generator.h  pso_lib_instance.cu  pso_matrix_generator.cu
src/pso/: config.h  pso.cu  pso.h  pso_config.h  pso_copy.cu  pso_copy.h  pso_instance.cu  pso_instance.h  pso_memory.h  pso_param_s.cu  pso_param_s.h  pso_print.cu  pso_print.h  pso_rating.cu  pso_rating.h  pso_setup.cu  pso_setup.h
